--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "ethers": "^5.7.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.0",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sass": "^1.66.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.23.2",
@@ -37,7 +39,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
 }
