--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "@safe-global/safe-core-sdk": "^3.3.5",
     "@safe-global/safe-ethers-lib": "^1.9.4",
     "@safe-global/sdk-starter-kit": "^1.1.5",
+    "@splinetool/runtime": "^0.9.506",
+    "@studio-freight/compono": "^0.0.51",
+    "@studio-freight/hamo": "^0.6.19",
+    "@studio-freight/react-lenis": "^0.0.36",
+    "@studio-freight/tempus": "^0.0.38",
     "@tanstack/react-query": "^5.66.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^5.7.2",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.475.0",
     "next": "15.1.0",
     "pino-pretty": "^13.0.0",
