feat(fix): fix build errors with new file imports

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.2.1",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
@@ -22,10 +23,13 @@
     "@studio-freight/hamo": "^0.6.19",
     "@studio-freight/react-lenis": "^0.0.36",
     "@studio-freight/tempus": "^0.0.38",
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.66.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^5.7.2",
+    "framer-motion": "^12.4.10",
+    "graphql-tag": "^2.12.6",
     "gsap": "^3.12.7",
     "lucide-react": "^0.475.0",
     "next": "15.1.0",
