--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@safe-global/safe-core-sdk": "^3.3.5",
     "@safe-global/safe-ethers-lib": "^1.9.4",
     "@safe-global/sdk-starter-kit": "^1.1.5",
-    "@splinetool/runtime": "^0.9.506",
+    "@splinetool/runtime": "^1.9.82",
     "@studio-freight/compono": "^0.0.51",
     "@studio-freight/hamo": "^0.6.19",
-    "@studio-freight/react-lenis": "^0.0.36",
+    "@studio-freight/react-lenis": "^0.0.38",
     "@studio-freight/tempus": "^0.0.38",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.66.0",
@@ -32,11 +32,13 @@
     "framer-motion": "^12.4.10",
     "graphql-tag": "^2.12.6",
     "gsap": "^3.12.7",
+    "lenis": "^1.2.3",
     "lucide-react": "^0.475.0",
     "next": "15.1.0",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-use": "^17.6.0",
     "sass": "^1.66.1",
     "sonner": "^2.0.1",
@@ -47,22 +49,22 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@size-limit/preset-app": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "mini-svg-data-uri": "^1.4.4",
-    "eslint-config-next": "15.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5",
-    "@size-limit/preset-app": "^9.0.0",
     "critters": "^0.0.20",
     "cross-env": "^7.0.3",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
+    "mini-svg-data-uri": "^1.4.4",
+    "postcss": "^8",
     "prettier": "^3.0.3",
-    "prettier-eslint": "^15.0.1"
+    "prettier-eslint": "^15.0.1",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5"
   }
 }
